<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_hotels"
            android:icon="@drawable/hotels"
            android:title="@string/hotels" />

        <item
            android:id="@+id/nav_parks"
            android:icon="@drawable/park"
            android:title="@string/parks" />
        <item
            android:id="@+id/nav_restaurants"
            android:icon="@drawable/ic_restaurants"
            android:title="@string/restaurants" />

        <item
            android:id="@+id/nav_tourist"
            android:icon="@drawable/tourist"
            android:title="@string/tourist_site" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/tourist"
            android:title="Logout" />

    </group>


</menu>
