<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorHome"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.javamini.TravelCompanion.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/colorHotels"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_hotels"
            style="@style/categoryStyle"
            android:contentDescription="@string/hotels"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/hotels"
            android:text="@string/hotels" />
    </FrameLayout>

    <FrameLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorParks"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_parks"
            style="@style/categoryStyle"
            android:contentDescription="@string/parks"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/park"
            android:text="@string/parks" />
    </FrameLayout>

    <FrameLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorRestaurants"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_restaurants"
            style="@style/categoryStyle"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_restaurants"
            android:contentDescription="@string/restaurants"
            android:text="@string/restaurants" />
    </FrameLayout>

    <FrameLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTourist"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_tourist"
            style="@style/categoryStyle"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/tourist"
            android:contentDescription="@string/tourist_site"
            android:text="@string/tourist_site" />
    </FrameLayout>

</LinearLayout>
